@startuml
set namespaceSeparator ::

class "spike_v2::src::board::src::core::stack_board_controller.dart::StackConfig" {
  +List<StackItem<StackItemContent>> data
  +Map<String, int> indexMap
  +StackItem<StackItemContent> []()
  +StackConfig copyWith()
  +String toString()
}

class "spike_v2::src::board::src::core::stack_board_controller.dart::StackBoardController" {
  -String? _tag
  -Size? _boardSize
  -Map<String, int> _indexMap
  {static} -StackBoardController _defaultController
  +Map<String, dynamic> innerApi
  +Size? boardSize
  +List<StackItem<StackItemContent>> innerData
  -Map<String, int> _newIndexMap
  +int hashCode
  +StackItem<StackItemContent>? getById()
  +int getIndexById()
  -List<StackItem<StackItemContent>> _reorder()
  +void addItem()
  +void removeItem()
  +void removeById()
  +void selectOne()
  +void setBoardSize()
  +void setItemStatus()
  +void setAllItemStatuses()
  +void moveItemOnTop()
  +void unSelectAll()
  +void updateBasic()
  +void updateItem()
  +void clear()
  +Map<String, dynamic>? getSelectedData()
  +Map<String, dynamic>? getDataById()
  +List<Map<String, dynamic>> getTypeData()
  +List<Map<String, dynamic>> getAllData()
  +bool ==()
  +void dispose()
}

"spike_v2::src::board::src::core::stack_board_controller.dart::StackBoardController" o-- "dart::ui::Size"
"spike_v2::src::board::src::core::stack_board_controller.dart::StackBoardController" o-- "spike_v2::src::board::src::core::stack_board_controller.dart::StackBoardController"
"spike_v2::src::board::src::helpers::safe_value_notifier.dart::SafeValueNotifier" <|-- "spike_v2::src::board::src::core::stack_board_controller.dart::StackBoardController"

abstract class "spike_v2::src::board::src::core::stack_board_item::stack_item.dart::StackItem" {
  +String boardId
  +String id
  +Size size
  +Offset offset
  +double angle
  +StackItemStatus status
  +bool lockZOrder
  +bool dock
  +T? content
  +int hashCode
  +StackItem<T> copyWith()
  +Map<String, dynamic> toJson()
  +String toString()
  +bool ==()
}

"spike_v2::src::board::src::core::stack_board_item::stack_item.dart::StackItem" o-- "dart::ui::Size"
"spike_v2::src::board::src::core::stack_board_item::stack_item.dart::StackItem" o-- "dart::ui::Offset"
"spike_v2::src::board::src::core::stack_board_item::stack_item.dart::StackItem" o-- "spike_v2::src::board::src::core::stack_board_item::stack_item_status.dart::StackItemStatus"

class "spike_v2::src::board::src::core::stack_board_item::stack_item_status.dart::StackItemStatus" {
  +int index
  {static} +List<StackItemStatus> values
  {static} +StackItemStatus editing
  {static} +StackItemStatus moving
  {static} +StackItemStatus scaling
  {static} +StackItemStatus resizing
  {static} +StackItemStatus roating
  {static} +StackItemStatus selected
  {static} +StackItemStatus idle
  {static} +StackItemStatus locked
}

"spike_v2::src::board::src::core::stack_board_item::stack_item_status.dart::StackItemStatus" o-- "spike_v2::src::board::src::core::stack_board_item::stack_item_status.dart::StackItemStatus"
"dart::core::Enum" <|-- "spike_v2::src::board::src::core::stack_board_item::stack_item_status.dart::StackItemStatus"

abstract class "spike_v2::src::board::src::core::stack_board_item::stack_item_content.dart::StackItemContent" {
  +Map<String, dynamic> toJson()
}

class "spike_v2::src::board::src::core::case_style.dart::CaseStyle" {
  +Color buttonBgColor
  +Color buttonBorderColor
  +double buttonBorderWidth
  +Color buttonIconColor
  +double buttonSize
  +Color frameBorderColor
  +double frameBorderWidth
  +double? boxAspectRatio
  +int hashCode
  +Map<String, dynamic> toJson()
  +bool ==()
}

"spike_v2::src::board::src::core::case_style.dart::CaseStyle" o-- "dart::ui::Color"


@enduml
